fixing width to height for vertical-align helper

--- a/kayzen-gs.css
+++ b/kayzen-gs.css
@@ -22,7 +22,7 @@ http://github.com/esr360/Kayzen-GS/
 }
 .row:before {
   content: "";
-  width: 100%;
+  height: 100%;
   display: inline-block;
   vertical-align: middle;
 }
